# stm32h7sl8-bootflash

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs  mx25uw25645g.rs
