[package]
name = "stm32h7s3l8-bootflash"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "stm32h7s3l8",
    "time-driver-tim2",
    "exti",
    #"memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-10_000_000",     # Set rather high to have better resolution when timing flash operations.
    #"tick-hz-32_768",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

assign-resources = "0.5.0"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
heapless = { version = "0.9.2", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = "2.1.1"


[patch.crates-io]
#embassy-embedded-hal = { path = "../forks/embassy/embassy-embedded-hal" }
#embassy-executor = { path = "../forks/embassy/embassy-executor" }
#embassy-futures = { path = "../forks/embassy/embassy-futures" }
#embassy-stm32 = { path = "../forks/embassy/embassy-stm32" }
#embassy-sync = { path = "../forks/embassy/embassy-sync" }
#embassy-time = { path = "../forks/embassy/embassy-time" }
#embassy-usb = { path = "../forks/embassy/embassy-usb" }
embassy-embedded-hal = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-executor = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-futures = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-stm32 = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-sync = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-time = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }
embassy-usb = { git = "https://github.com/tarfu/embassy.git", branch = "n6-boot-from-external-flash" }


# cargo build/run
[profile.dev]
opt-level = 's'
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
overflow-checks = true

# cargo build/run --release
[profile.release]
opt-level = 's'
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
overflow-checks = false
